--- a/prime_assurance/assurance/templates/includes/header.html
+++ b/prime_assurance/assurance/templates/includes/header.html
@@ -1,10 +1,8 @@
 <header>
     <nav>
         <ul>
-            <li><a href='/blog'>Articles</a></li>
-            <li><a href="/blog/nouveau"> Créer un article</a></li>
-            <li><a href="/blog/categories/">Catégories</a></li>
-            <li><a href="/blog/categorie_article">Créer une categorie</a></li>
+            <li><a href='/liste_operateur'>opérateurs</a></li>
+            <li><a href="/nouveloperateur"> ajouter un opérateur</a></li>
         </ul>
     </nav>
 </header>
