--- a/prime_assurance/templates/includes/footer.html
+++ b/prime_assurance/templates/includes/footer.html
@@ -16,7 +16,7 @@
               Dans un monde où les cœurs battent au rythme des assurances, Assur'Aimant, assureur au grand cœur, protégeait les rêves des gens, offrant amour et sécurité face aux tempêtes de la vie.
             </p>
             <p class="mt-4 text-sm text-gray-400">
-              Assur'Aimant, fidèle gardien des espoirs, transformait l'incertitude en sérénité, unissant les cœurs en confiance.
+              Assur'Aimant, fidèle gardien des espoirs, transformant l'incertitude en sérénité, unissant les cœurs en confiance.
             </p>
           </div>
         </div>
