--- a/prime_assurance/templates/includes/header.html
+++ b/prime_assurance/templates/includes/header.html
@@ -12,7 +12,7 @@
             <li><a href="{% url 'accueil' %}" aria-label="Our product" title="Our product" class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Accueil</a></li>
             <li><a href="{% url 'couverture' %}" aria-label="Our product" title="Our product" class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Notre couverture</a></li>
             <li><a href="{% url 'devis' %}" aria-label="Our product" title="Our product" class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Devis assurance gratuit</a></li>
-            <li><a href="{% url 'apropos' %}" aria-label="About us" title="About us" class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">A propos de nous</a></li>
+            <li><a href="{% url 'rendezvous' %}" aria-label="About us" title="About us" class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Prendre un rendez-vous</a></li>
           </ul>
         </div>
         <ul class="flex items-center hidden space-x-8 lg:flex">
