--- a/prime_assurance/templates/base.html
+++ b/prime_assurance/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Prime Assurance{% endblock %}</title>
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="h-full flex flex-col min-h-screen">
