--- a/prime_assurance/assurance/templates/assurance/liste_clients_tableau.html
+++ b/prime_assurance/assurance/templates/assurance/liste_clients_tableau.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 
 {%block content %}
-    {% if user.poste == 'Manager' or user.poste == 'Courtier' or user.is_superuser%}
+    {% if user.is_operateur or user.is_superuser%}
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
-            <h2 class="text-2xl font-bold mb-4">base de données clients</h2>
+            <div class="flex justify-between items-center mb-6">
+                <h2 class="text-2xl font-bold">base de données clients</h2>
+                <a href="{% url 'enregistrer_client' %}" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                    Ajouter un client
+                </a>
+            </div>
             <table id="example" class="table-auto w-full">
                 <thead>
                     <tr>
