--- a/prime_assurance/assurance/templates/assurance/page_utilisateur_client.html
+++ b/prime_assurance/assurance/templates/assurance/page_utilisateur_client.html
@@ -26,7 +26,7 @@
                         <span class="absolute right-0 m-3 h-3 w-3 rounded-full bg-green-500 ring-2 ring-green-300 ring-offset-2"></span>
                         {% if client.sexe == 'female' %}
                             {% if client.is_client %}
-                                <img src="{% static 'images/femme2.jpg' %}?v=1" alt="" class="mx-auto h-auto w-full rounded-full shadow-lg" />
+                                <img class="mx-auto h-auto w-full rounded-full shadow-lg" src="{% static 'images/femme_souscrite.jpg' %}" alt="" />
                             {% elif client.is_prospect %}
                                 <img class="mx-auto h-auto w-full rounded-full shadow-lg" src="{% static 'images/femme1.jpg' %}" alt="" />
                             {% endif %}
@@ -42,20 +42,26 @@
                     <!-- Informations principales -->
                     <h1 class="mt-4 mb-2 text-center text-2xl font-bold text-gray-900">{{client.first_name}} {{client.last_name}}</h1>
                     <p class="text-center text-sm font-medium text-gray-500">
-                        {% if client.sexe == 'male' %}Homme{% else %}Femme{% endif %}
+                        {% if client.sexe == 'male' %}Homme{% elif client.sexe == 'female' %}Femme{% endif %}
                     </p>
                     <h3 class="mt-3 text-center text-lg font-semibold text-emerald-600">
-                        Montant annuel des charges : {{client.charges|floatformat:2}} €
+                        {% if client.is_prospect or client.is_client %}
+                            Montant annuel des charges : {{client.charges|floatformat:2}} €
+                        {% else %}
+                            Admin
+                        {% endif %}
                     </h3>
-
+                    
                     <!-- Liste des informations -->
                     <ul class="mt-6 space-y-1 divide-y rounded-lg bg-gray-50 py-3 px-4 shadow-inner">
-                        <li class="flex items-center justify-between py-3 text-sm">
-                            <span class="font-medium">Statut</span>
-                            <span class="ml-auto rounded-full bg-emerald-100 py-1 px-3 text-sm font-medium text-emerald-800">
-                                {% if client.is_prospect %}Prospect{% elif client.is_client %}Client{% endif %}
-                            </span>
-                        </li>
+                        {% if client.is_prospect or client.is_client %}
+                            <li class="flex items-center justify-between py-3 text-sm">
+                                <span class="font-medium">Statut</span>
+                                <span class="ml-auto rounded-full bg-emerald-100 py-1 px-3 text-sm font-medium text-emerald-800">
+                                    {% if client.is_prospect %}Prospect{% elif client.is_client %}Client{% endif %}
+                                </span>
+                            </li>
+                        {% endif %}
                         
                         <!-- Informations du client -->
                         <li class="flex items-center justify-between py-3 text-sm">
@@ -105,24 +111,49 @@
                         </li>
                     </ul>
                 </div>
-                <div class="mt-8 grid {% if client.is_prospect %}grid-cols-2 md:grid-cols-4{% else %}grid-cols-1 md:grid-cols-3{% endif %} gap-4 px-4 max-w-4xl mx-auto">
-                    {% if client.is_prospect %}
-                        <form method="POST">
-                            {% csrf_token %}
-                            <button type="submit" class="w-full rounded-lg bg-emerald-600 px-6 py-2 text-sm font-medium text-white shadow-sm hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2">
-                                Souscrire
-                            </button>
-                        </form>                    
-                    {% endif %}
+                {% if client.is_prospect %}
+                <div class="mt-8 grid grid-cols-4 md:grid-cols-4 gap-4 px-4 max-w-4xl mx-auto">
+                    <form method="POST">
+                        {% csrf_token %}
+                        <button type="submit" class="w-full rounded-lg bg-emerald-600 px-6 py-2 text-sm font-medium text-white shadow-sm hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2">
+                            Souscrire
+                        </button>
+                    </form>
                     <a href="{% url 'modifier_profil' %}" class="w-full text-center rounded-lg bg-emerald-600 px-6 py-2 text-sm font-medium text-white shadow-sm hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2">
                         Modifier profil
                     </a>
+                    <a href="{% url 'modifier_password' %}" class="w-full text-center rounded-lg bg-emerald-600 px-6 py-2 text-sm font-medium text-white shadow-sm hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2">
+                        Modifier mot de passe
+                    </a>
                     <a href="{% url 'rendezvous' %}" class="w-full text-center rounded-lg bg-emerald-600 px-6 py-2 text-sm font-medium text-white shadow-sm hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2">
                         Prendre rendez-vous
-                    </a>                    <button type="button" class="w-full rounded-lg bg-red-600 px-6 py-2 text-sm font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2">
-                        Supprimer mon compte
-                    </button>
+                    </a>                    
                 </div>                   
+                
+                {% elif client.is_client %}
+                <div class="mt-8 grid grid-cols-3 md:grid-cols-3 gap-4 px-4 max-w-4xl mx-auto">
+                    <a href="{% url 'modifier_profil' %}" class="w-full text-center rounded-lg bg-emerald-600 px-6 py-2 text-sm font-medium text-white shadow-sm hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2">
+                        Modifier profil
+                    </a>
+                    <a href="{% url 'modifier_password' %}" class="w-full text-center rounded-lg bg-emerald-600 px-6 py-2 text-sm font-medium text-white shadow-sm hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2">
+                        Modifier mot de passe
+                    </a>
+                    <a href="{% url 'rendezvous' %}" class="w-full text-center rounded-lg bg-emerald-600 px-6 py-2 text-sm font-medium text-white shadow-sm hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2">
+                        Prendre rendez-vous
+                    </a>                    
+                </div>                   
+                
+                {% else %}
+                <div class="mt-8 grid grid-cols-2 md:grid-cols-2 gap-4 px-4 max-w-4xl mx-auto">
+                    <a href="{% url 'modifier_profil' %}" class="w-full text-center rounded-lg bg-emerald-600 px-6 py-2 text-sm font-medium text-white shadow-sm hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2">
+                        Modifier profil
+                    </a>
+                    <a href="{% url 'modifier_password' %}" class="w-full text-center rounded-lg bg-emerald-600 px-6 py-2 text-sm font-medium text-white shadow-sm hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2">
+                        Modifier mot de passe
+                    </a>
+                </div>                   
+                {% endif %}
+
             </div>
         </div>
     </div>
