--- a/prime_assurance/templates/base.html
+++ b/prime_assurance/templates/base.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Prime Assurance{% endblock %}</title>
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="h-full flex flex-col min-h-screen">
     <header>
-        {% include "includes/header.html" %}
+        {% if user.is_operateur or user.is_superuser %}
+            {% include "includes/staff_header.html" %}
+        {% else %}
+            {% include "includes/main_header.html" %}
+        {% endif %}
     </header>
     <main class="flex-grow">
         {% block content %}
