--- a/prime_assurance/assurance/templates/assurance/liste_operateurs_tableau.html
+++ b/prime_assurance/assurance/templates/assurance/liste_operateurs_tableau.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {%block content %}
-    {% if user.poste == 'Manager' or user.is_superuser%}
+    {% if user.poste == 'manager' or user.is_superuser%}
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-2xl font-bold mb-4">base de données opérateurs</h2>
